[project]
name = "mods"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "br8km", email = "59230598+br8km@users.noreply.github.com" }
]
dependencies = [
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "run:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
